--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TEMPLATE</title>
+    <title>Momseek</title>
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
