--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     @@include("components/_header.html")
     @@include("components/_hero.html")
     @@include("components/_info.html")
+    @@include("components/_blog.html")
     @@include("components/_baner.html")
 
 
