--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     @@include("components/_info.html")
     @@include("components/_blog.html")
     @@include("components/_baner.html")
+    @@include("components/_community.html")
 
 
 
